--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <div id="width">
       <div class="box">
 
-             <div id="header">
-                <h1 id="title" >My ToDo List</h1>
-                <button class="button is-rounded">0/6</button>
+            <div id="header">
+              <h1 id="title" >My ToDo List</h1>
+              <button class="button is-rounded" style="color:hsl(0, 0%, 71%);">0/6</button>
              </div>
 
              <div id="value"></div>
-
+             
              <div id="control">
-                  <input id="input" class="input" type="text" placeholder="What's next?" />
-                  <button id="button" class="button" onclick="addTask();">Add Task</button>
+               <input maxlength="1" id="input" class="input" type="text" placeholder="What's next?" />
+               <button id="button" class="button" onclick="addTask();" 
+               style="color: hsl(0, 0%, 48%);">Add Task</button>
              </div>
 
         </div>
