--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"
     />
-    <title>Багажийн жагсаалт</title>
+    <title>Task manager for Boz from Jerry !</title>
     <!-- "Todo List" in Mongolian -->
   </head>
   <body>
