--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <div id="header">
           <h1 id="title">БОЗ-ийн даалгаврын менежмент</h1>
           <!-- "Task Management of BOZ" -->
-          <button class="button is-rounded" style="color: hsl(0, 0%, 71%)">
+          <button
+            class="button is-rounded count"
+            style="color: hsl(0, 0%, 71%)"
+          >
             0/25
           </button>
         </div>
