--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="mn">
-  <!-- Set language to Mongolian -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,62 +8,61 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"
     />
-    <title>Task manager for Boz from Jerry !</title>
-    <!-- "Todo List" in Mongolian -->
+    <title>Task Manager for Boz from Jerry!</title>
   </head>
   <body>
     <div id="width">
       <div class="box">
-        <div id="header">
-          <h1 id="title">БОЗ-ийн даалгаврын менежмент</h1>
-          <!-- "Task Management of BOZ" -->
+        <header id="header">
+          <h1 id="title">БОЗ-ийн даалгаврын таск менежир</h1>
           <button
             class="button is-rounded count"
             style="color: hsl(0, 0%, 71%)"
           >
             0/25
           </button>
-        </div>
+        </header>
 
-        <div id="value"></div>
+        <main id="value"></main>
 
         <div id="control">
-          <!-- "Must Do Task" -->
-          <!-- "Task" -->
-          <input
-            maxlength="30"
-            id="task-input"
-            class="input"
-            type="text"
-            placeholder="Юу хийх вэ?"
-          />
-          <!-- "Who is Doing" -->
-          <input
-            maxlength="30"
-            id="who-input"
-            class="input"
-            type="text"
-            placeholder="Хэн энэ даалгаврыг хийх вэ?"
-          />
-          <!-- "When to Finish Task" -->
-          <input
-            maxlength="30"
-            id="when-input"
-            class="input"
-            type="text"
-            placeholder="Төгсгөлийн хугацаа?"
-          />
-
-          <button
-            id="button"
-            class="button"
-            onclick="addTask();"
-            style="color: hsl(0, 0%, 48%)"
-          >
-            Даалгавар нэмэх
-            <!-- "Add Task" -->
-          </button>
+          <form id="task-form" onsubmit="addTask(event)">
+            <input
+              maxlength="30"
+              id="task-input"
+              class="input"
+              type="text"
+              placeholder="Юу хийх вэ?"
+              required
+            />
+            <input
+              maxlength="30"
+              id="who-input"
+              class="input"
+              type="text"
+              placeholder="Хэн энэ даалгаврыг хийх вэ?"
+              required
+            />
+            <input
+              maxlength="30"
+              id="when-input"
+              class="input"
+              type="text"
+              placeholder="Төгсгөлийн хугацаа?"
+              required
+            />
+            <button
+              id="button"
+              class="button"
+              type="submit"
+              style="color: hsl(0, 0%, 48%)"
+            >
+              Даалгавар нэмэх
+            </button>
+          </form>
         </div>
+
+        <div id="points"></div>
       </div>
     </div>
 
