--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="width">
       <div class="box">
         <header id="header">
-          <h1 id="title">БОЗ-ийн таск менежир</h1>
+          <h1 id="title">БОЗ-ийн даалгаврын таск менежир</h1>
           <button
             class="button is-rounded count"
             style="color: hsl(0, 0%, 71%)"
